# truecolor

./: .gitignore  Cargo.toml  LICENSE  README.md  README_STAGE0.md  qudipi.toml  requirements-local.txt
.github/workflows/: mutable-corpus-ci.yml  mutable-corpus-enterprise.yml  stage1-m01.yml  stage1-m02-m09.yml  stage1-m02.yml
analysis/governance/: README.md  STAGE_0_CLOSED.yaml  STAGE_0_READY.yaml  STAGE_2_CLOSED.yaml  admissibility_rules.yaml  artifact_contract.yaml  claim_dataset_matrix.yaml  (+22 more)
config/: document_repositories.json
crates/qudipi-cli/: Cargo.toml
crates/qudipi-cli/src/: cli.rs  main.rs  output.rs
crates/qudipi-cli/src/commands/: config.rs  environment.rs  mod.rs  registry.rs
crates/qudipi-config/: Cargo.toml
crates/qudipi-config/src/: canonical.rs  compiler.rs  error.rs  evidence.rs  lib.rs  loader.rs  reproducibility.rs
crates/qudipi-config/src/model/: application.rs  asset.rs  compiled.rs  config.rs  corpus.rs  governance.rs  license.rs  mod.rs  operator.rs  role.rs  runtime.rs  schema.rs  stage.rs
crates/qudipi-config/src/validation/: application.rs  assets.rs  governance.rs  graph.rs  licenses.rs  mod.rs  operators.rs  roles.rs  runtime.rs  schemas.rs  stages.rs
crates/qudipi-config/tests/: asset_stage_contract.rs  config_falsification.rs  evidence_contract.rs  generic_corpus_contract.rs  reproducibility_contract.rs  schema_contract.rs
datasets/: registry.tsv
docs/: MutableCorpusReconciliation.md
scripts/: capture_official_dataset_download.py  download_open_data.sh  download_scin_public.py  download_skin_datasets_metadata.sh
(+5228 files in other folders)
