[workspace]
members = [
  "crates/qudipi-domain",
  "crates/qudipi-config",
  "crates/qudipi-environment",
  "crates/qudipi-cli",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2024"
license-file = "LICENSE"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.9"
