[package]
name = "qudipi-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

default-run = "qudipi"
[[bin]]
name = "qudipi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
qudipi-config = { path = "../qudipi-config" }
qudipi-environment = { path = "../qudipi-environment" }
serde.workspace = true
serde_json.workspace = true
