[package]
name = "qudipi-config"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
qudipi-domain = { path = "../qudipi-domain" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
